[package]
name = "worders"
version = "0.1.0"
edition = "2021"
authors = ["Sarah <m.sarahgreywolf@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.55"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "HtmlTableElement",
    "HtmlTableRowElement",
    "HtmlTableColElement",
    "HtmlTableCellElement",
    "HtmlCollection",
]
