[package]
name = "worders"
version = "0.1.0"
edition = "2021"
authors = ["Sarah <m.sarahgreywolf@outlook.com>"]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
byteorder = "1.4.3"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
rand = "0.8.4"


[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"
console_error_panic_hook = "0.1.6"
getrandom = {version="0.2", features=["js"]}
rand = {version="0.8.4"}
js-sys = "0.3.55"

[target.'cfg(target_arch="wasm32")'.dependencies.web-sys]
version = "0.3.55"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "HtmlTableElement",
    "HtmlTableRowElement",
    "HtmlTableColElement",
    "HtmlTableCellElement",
    "HtmlButtonElement",
    "HtmlCollection",
    "WebSocket",
    "BinaryType"
]

[package.metadata.wasm-pack.profile.dev]
wasm-opt=false
[package.metadata.wasm-pack.profile.release]
wasm-opt=false

[workspace]
members = [
    "worders_server"
]
